# CSVDataTransformer

./: .gitignore  README.md  REQUIREMENTS.md  codeSanityGuilinesForAI.md  pyproject.toml  sampleConfig.json
config_ui/: README.md  REQUIREMENTS.md  codeSanityGuilinesForAI.md  requirements.txt  run-dev.ps1
config_ui/backend/: __init__.py  app.py  exceptions.py  logging_config.py  pyproject.toml  settings.py
csv_data_transformer/: __init__.py  __main__.py  cli.py  exceptions.py
csv_data_transformer/api/: app.py  dependencies.py  exception_handlers.py  middleware.py  responses.py  types.py  uploads.py  workspace.py
csv_data_transformer/audit/: __init__.py  logger.py
csv_data_transformer/config/: __init__.py  base.py  factory.py  g0_validator.py  json_reader.py  models.py
csv_data_transformer/connections/: __init__.py  base.py  local_file.py
csv_data_transformer/engine/: __init__.py  base.py  casting.py  column_names.py  expression_safety.py  expressions.py  joins.py  operators.py  pandas_engine.py  predicates.py
csv_data_transformer/io/: __init__.py  file_guards.py
csv_data_transformer/pipeline/: __init__.py  blueprint_runner.py  orchestrator.py  validator.py  write_verification.py
docs/: ASYNC_JOB_QUEUE_BRAINSTORM.md  CONFIG_TEMPLATE.md  REQUIREMENTS.md  codeSanityGuilinesForAI.md  extensibility.md
samples/manual_advanced/: README.md  config.json
schema/: config.schema.json  config.template.json
tests/fixtures/: use_case_d_split.json
tests/integration/: test_api.py  test_e2e.py  test_e2e_regression.py  test_openapi.py  test_pipeline.py
(+80 files in other folders)
